API: Исправление в Car Book: -Исправлены пути и добавлены доступы own и all для доступа с мобильного приложения -Изменены некоторые api
